--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -43,7 +43,7 @@
     z-index: 2;
 }
 
-.filledCardImgAdd p {
+.filledCardImgAdd span {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -56,7 +56,7 @@
     transition: all 0.3s;
 }
 
-.filledCardImgAdd p:hover {
+.filledCardImgAdd span:hover {
     width: 60px;
     height: 60px;
     background: url(./img/addCarOrange.svg) no-repeat;
