--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -173,6 +173,7 @@
 .startCity,
 .endCity,
 .newCity {
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
