--- a/src/components/home/HomeBody/Search.css
+++ b/src/components/home/HomeBody/Search.css
@@ -1,6 +1,34 @@
-.searchElement_style{
-    position: relative;
-    top: 0px;
-    left: 10px;
+.searchElement_style {
+    position: absolute;
+    z-index: 4;
+    top: 38px;
+    left: 35px;
     color: black;
 }
+
+.searchDropdownDriverInformation {
+    position: absolute;
+    z-index: 4;
+    top: 45px;
+    left: 0px;
+    color: black;
+}
+
+.searchInputDriverInformation {
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .searchInputDriverInformation {
+        padding-left: 0px !important;
+        height: 62px;
+        padding-top: 30px;
+        font-size: 16px !important;
+    }
+    .searchInputDriverInformation::placeholder {
+        color: rgba(0, 0, 0, 0.3) !important;
+        font-size: 16px !important;
+    }
+}
+
+@media (max-width: 576px) {}
