--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -19,8 +19,13 @@
 }
 
 .tourContent {
-    margin-left: 10px;
     padding-top: 20px !important;
+}
+
+.tourContent p {
+    font-weight: 400;
+    font-size: 13px;
+    color: #666;
 }
 
 .tourBodyElement {
@@ -63,8 +68,14 @@
     margin: 0;
 }
 
+.tourContentTitle {
+    min-height: 40px;
+}
+
 .tourContentTitle p {
+    padding-left: 10px;
     font-weight: 400;
+    font-size: 16px;
     color: #304269;
 }
 
@@ -75,6 +86,7 @@
     font-weight: 400;
     font-size: 14px;
     border-radius: 5px;
+    margin: 5px 0;
     border: 1px solid #ccc;
     padding-left: 10px !important;
     min-height: 40px;
@@ -86,7 +98,7 @@
 
 div.tourContentCheckbox {
     position: relative;
-    width: 20px;
+    min-height: 40px;
 }
 
 .tourContentCheckbox label {
@@ -114,7 +126,7 @@ div.tourContentCheckbox {
 .tourContentCheckbox span {
     position: absolute;
     z-index: 3;
-    top: 0px;
+    top: 2px;
     left: 0px;
     height: 18px;
     width: 18px;
@@ -157,6 +169,11 @@ div.tourContentCheckbox {
 
 /* TourContentCheckbox End */
 
+.tourContentEveryday label {
+    font-weight: 400;
+    font-size: 14px;
+}
+
 .tourContent select {
     width: 33.3%;
     min-height: 40px;
@@ -177,8 +194,7 @@ div.tourContentCheckbox {
     transition: all 0.3s;
 }
 
-
-/* .tourContent textarea:hover,
+.tourContent textarea:hover,
 .tourContent textarea:focus,
 .tourContent select:hover,
 .tourContent select:focus,
@@ -187,7 +203,7 @@ div.tourContentCheckbox {
     border-color: #304269;
     text-decoration: none;
     outline: #304269;
-} */
+}
 
 .tourContent textarea {
     width: 100%;
@@ -240,23 +256,31 @@ div.tourContentCheckbox {
 
 /* openMultipleDatepicker Bigin */
 
-.openMultipleDatepicker {
-    font-family: "Roboto" !important;
-    text-align: center !important;
-}
 
-.openMultipleDatepicker .heJwJj {
-    background-color: #304269;
-    height: 350px;
-}
+/* .openMultipleDatepicker {
 
-.openMultipleDatepicker .fJLAcL button {
+} */
+
+.openMultipleDatepicker label {
+    font-weight: 400;
+    font-size: 14px;
     color: #304269;
 }
+
+
+/* .openMultipleDatepicker input {
+    
+} */
 
 .openMultipleDatepicker span {
-    color: #304269;
+    color: #000;
+    font-weight: 400;
+    font-size: 14px;
     cursor: pointer;
+    text-indent: 20px;
+    background: url(./img/calendarGray.svg)no-repeat;
+    background-size: 14px 14px;
+    background-position: top 2px left 0;
 }
 
 .openMultipleDatepicker span:hover {
@@ -326,6 +350,9 @@ div.tourContentCheckbox {
     .tourContent .tripSettingsContentDeletButton {
         position: relative;
         left: 0;
+    }
+    span.tourContentOtherSpan {
+        top: -6px;
     }
 }
 
