--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -24,10 +24,19 @@
     width: 100%;
 }
 
+.filledCardImg img {
+    border-radius: 5px 5px 0 0;
+    width: 100%;
+    height: 210px;
+    object-fit: cover;
+}
+
 .filledCardImgAdd {
     position: relative;
     width: 100%;
-    background: #686868;
+    height: 210px;
+    background: #eaeaea;
+    border-radius: 5px 5px 0 0;
 }
 
 .filledCardImgAddBg {
@@ -35,12 +44,14 @@
     z-index: 3;
     width: 100%;
     height: 100%;
-    background: #686868;
+    background: #eaeaea;
+    border-radius: 5px 5px 0 0;
 }
 
 .filledCardImgAdd img {
     position: relative;
     z-index: 2;
+    border-radius: 5px 5px 0 0;
 }
 
 .filledCardImgAdd span {
@@ -49,18 +60,16 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 4;
-    width: 60px;
-    height: 60px;
-    background: url(./img/addCarWhite.svg) no-repeat;
-    background-size: 60px 60px;
+    width: 230px;
+    height: 130px;
+    background: url(./img/addCarBlue.svg) no-repeat;
+    background-size: 230px 130px;
     transition: all 0.3s;
 }
 
 .filledCardImgAdd span:hover {
-    width: 60px;
-    height: 60px;
     background: url(./img/addCarOrange.svg) no-repeat;
-    background-size: 60px 60px;
+    background-size: 230px 130px;
 }
 
 .filledCardInformation p {
@@ -122,11 +131,12 @@
 .cardInformationType {
     width: 100%;
     padding: 15px 10px;
+    overflow: hidden;
 }
 
 .cardInformationType p {
     font-family: "Roboto";
-    font-weight: 500;
+    font-weight: 400;
     font-size: 16px;
     color: #304269;
     margin-bottom: 0px;
