--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -2,7 +2,7 @@
     position: relative;
     line-height: 40px;
     margin-bottom: 30px;
-    overflow-y: auto;
+    overflow: hidden;
     border-bottom: 1px solid #ccc;
     padding-left: 15px;
     padding-right: 15px;
