--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -4,6 +4,7 @@
     margin-bottom: 30px;
     margin-right: 15px;
     overflow-x: auto;
+    scroll-behavior: smooth;
     border-bottom: 1px solid #ccc;
     padding-left: 15px;
     padding-right: 15px;
@@ -66,7 +67,6 @@
     font-family: "Roboto";
     font-weight: 500;
     font-size: 12px;
-    transition: 0.5s ease;
 }
 
 .basicInformationBodyTopImgHover {
