--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -34,7 +34,8 @@
 .filledCardImgAdd {
     position: relative;
     width: 100%;
-    height: 210px;
+    height: 100%;
+    min-height: 210px;
     background: #eaeaea;
     border-radius: 5px 5px 0 0;
 }
