--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -48,7 +48,7 @@
 
 .basicInformationBodyTop {
     position: relative;
-    padding: 30px 15px;
+    padding: 15px;
 }
 
 .basicInformationBodyTopImg {
