--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -303,20 +303,41 @@ div.tourContentCheckbox {
 }
 
 .filledTourImgAddBg {
-    position: absolute;
-    z-index: 3;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 100%;
-    background: #eaeaea;
-    border-radius: 5px 5px 0 0;
+    min-height: 210px;
+    background: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: ease 0.3s;
 }
 
-.filledTourImgAddBg span {
+.filledTourImgAddBg:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.filledTourImgAddBg div {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 4;
+    z-index: 2;
+}
+
+.filledTourImgAddBg p {
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 16px;
+    color: #304269;
+    margin-top: 11px;
+    margin-bottom: 0px;
+    transition: all 0.3s;
+}
+
+.filledTourImgAddBg div span {
+    position: relative;
+    z-index: 3;
     width: 160px;
     height: 90px;
     background: url(./img/frontBusBlue.svg) no-repeat;
@@ -324,9 +345,13 @@ div.tourContentCheckbox {
     transition: all 0.3s;
 }
 
-.filledTourImgAddBg span:hover {
+.filledTourImgAddBg div span:hover {
     background: url(./img/frontBusOrange.svg) no-repeat;
     background-size: 160px 90px;
+}
+
+.filledTourImgAddBg div span:hover~p {
+    color: #f60;
 }
 
 .settingsTourPlace {
