--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -1,3 +1,12 @@
+body::after {
+    position: absolute;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    z-index: -1;
+    content: url(img/diverBG.png) url(img/calendar.png) url(img/settings.png);
+}
+
 .navigationBody {
     position: relative;
     line-height: 40px;
