--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -32,45 +32,52 @@
 }
 
 .filledCardImgAdd {
-    position: relative;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 100%;
     min-height: 210px;
-    background: #eaeaea;
-    border-radius: 5px 5px 0 0;
+    background: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: ease 0.3s;
 }
 
-.filledCardImgAddBg {
-    position: absolute;
-    z-index: 3;
-    width: 100%;
-    height: 100%;
-    background: #eaeaea;
-    border-radius: 5px 5px 0 0;
-}
-
-.filledCardImgAdd img {
-    position: relative;
-    z-index: 2;
-    border-radius: 5px 5px 0 0;
-}
-
-.filledCardImgAdd span {
+.filledCardImgAdd div {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 4;
+    z-index: 2;
+}
+
+.filledCardImgAdd:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.filledCardImgAdd span {
     width: 230px;
-    height: 130px;
+    height: 100px;
     background: url(./img/addCarBlue.svg) no-repeat;
     background-size: 230px 130px;
     transition: all 0.3s;
 }
 
-.filledCardImgAdd span:hover {
+.filledCardImgAdd:hover span {
     background: url(./img/addCarOrange.svg) no-repeat;
     background-size: 230px 130px;
+}
+
+.filledCardImgAdd p {
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 16px;
+    color: #304269;
+    margin-bottom: 0px;
+    transition: all 0.3s;
+}
+
+.filledCardImgAdd:hover p {
+    color: #f60;
 }
 
 .filledCardInformation p {
