--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -1,12 +1,3 @@
-body::after {
-    position: absolute;
-    width: 0;
-    height: 0;
-    overflow: hidden;
-    z-index: -1;
-    content: url(./img/frontBusOrange.svg);
-}
-
 .addTourShow {
     min-width: 250px;
     min-height: 40px;
@@ -354,12 +345,12 @@ div.tourContentCheckbox {
     transition: all 0.3s;
 }
 
-.filledTourImgAddBg div span:hover {
+.filledTourImgAddBg:hover span {
     background: url(./img/frontBusOrange.svg) no-repeat;
     background-size: 160px 90px;
 }
 
-.filledTourImgAddBg div span:hover~p {
+.filledTourImgAddBg:hover p {
     color: #f60;
 }
 
